# coder_env_2

./: .gitignore  Dockerfile  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.json  test_env.py  test_output.py  validate-submission.sh
server/: app.py  environment.py
